name:                joint-zoo
version:             0.1.5
synopsis:            Concrete transformers for joint package
homepage:            https://github.com/iokasimov/joint
license:             BSD3
license-file:        LICENSE
author:              Murat Kasimov
maintainer:          Murat Kasimov <iokasimov.m@gmail.com>
copyright:           Copyright (c) 2018 Murat Kasimov
category:            Data, Control
build-type:          Simple
cabal-version:       >= 1.10

source-repository head
  type: git
  location: https://github.com/iokasimov/joint-zoo.git

library
  exposed-modules:
  build-depends: base == 4.*, joint == 0.1.5
  default-language: Haskell2010
  ghc-options: -fno-warn-tabs
  default-extensions:
    LiberalTypeSynonyms
    PackageImports
    RankNTypes
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
